# MADDENING

./: .gitignore  .skyignore  CHANGELOG.md  CITATION.cff  CLOUD_ROADMAP.md  CONTRIBUTING.md  DESIGN.md  DOCUMENTATION_ARCHITECTURE.md  PLAN_accuracy_and_usd.md  README.md  ROADMAP.md  SECURITY.md  TODO_perf.md  V0.2_PROGRESS.md  pyproject.toml  requirements.txt  sbom.json
.github/ISSUE_TEMPLATE/: anomaly.md
.github/workflows/: ci.yml  publish.yml  slow-tests.yml
Nodes/: ball.py  table.py
benchmarks/: wavelet_cavity.py
docker/: Dockerfile.cloud
docs/: bibliography.bib  glossary.md  index.md
docs/_static/: switcher.json
docs/developer_guide/: adaptive_node.md  documentation_standards.md  edge_validation_migration.md  halo_width_migration.md  node_authoring.md  sharded_static_data.md  sharding_topology.md  stability_report.md  static_array_migration.md  testing_standards.md  versioned_docs.md  wavelet_adaptive_node.md
docs/regulatory/: downstream_integration.md  eu_mdr_guidelines.md  iec62304_mapping.md  intended_use.md  mdcg_2019_11.md
docs/release_notes/: index.md  v0.2.1.md  v0.2.md  v0.3.0.md
docs/user_guide/: cloud_resume.md  installation.md  quickstart.md
docs/validation/: cou_template.md  framework_verification.md  known_anomalies.yaml  soup_package.md
examples/cloud/: cloud_credentials.example.yaml  job_config.example.yaml
maddening/: __init__.py
maddening/api/: README.md  __init__.py  binary_encoder.py  server.py
maddening/core/: __init__.py  edge.py  graph_manager.py  node.py
maddening/examples/: README.md  adaptive_demo.py  bouncing_ball_scene.py  bouncing_ball_terminal.py  coupling_demo.py  differentiable_optimization.py  lbm_pipe_interactive.py  remote_viz_client.py  rigid_body_demo.py  scan_performance.py  surrogate_demo.py
maddening/nodes/: __init__.py  ball.py  heat.py  lbm_pipe.py  rigid_body_2d.py  spring.py  table.py
maddening/serialization/: README.md
maddening/surrogates/: __init__.py  architecture.py  dataset.py  node.py  physics_losses.py  trainer.py  validator.py
maddening/viz/: __init__.py  network.py  relay.py  renderer.py  runner.py
prototype/: jaxtest.py  main.py  simulation_node.py
scripts/: check_anomalies.py  check_citations.py  check_impl_mapping.py  check_transforms.py  generate_stability_report.py
spikes/adaptive_node/: SPIKE_FINDINGS.md  boundary_wrong_sign.py  cdd_implementation.py  cdd_with_scaling.py  cheap_diagnostic.py  cheap_diagnostic_v2.py  diagonal_oracle.py  jaxtree_prototype.py  locality_2d.py  locality_theorem.py  multimask_adjoint.py  preconditioner_sufficiency.py  q2_debug.py  q2_frozen_set_gradient.py  q3_chattering.py  q4_scan.py  q_epsilon_grad.py  rolling_active_set.py  symmetry_break_recovery.py  symmetry_prediction.py  threshold_calibration.py  trap_characterisation.py
spikes/wavelet_derisking/: FINDINGS.md  KNOWN_LIMITATIONS.md  README.md  closeout_3d.py  dd_jax_poc.py  dd_wavelets.py  discontinuous_coeff.py  dthreshold_empirical.py  g1_cdd_convergence.py  g1_condition_number.py  g1_wrong_sign.py  g2_3d.py  g2_trap_basis.py  g3_biharmonic.py  g3_trajectory.py  g4_improvements.py  hybrid_jacobi.py  limitation_probes.py  nonlinear_cdd.py  submatrix_2d3d.py
src/maddening/: __init__.py  warnings.py
tests/: conftest.py  test_api.py  test_callbacks.py  test_checkpoint.py  test_deeponet.py  test_frame_renderer.py  test_frame_renderer_3d.py  test_graph_manager.py  test_import_guards.py  test_lbm_pipe.py  test_migration_errors.py  test_replace.py  test_serialization.py  test_trainer.py  test_viz.py
tests/adaptive/: _mock_poisson_sine.py  conftest.py  test_adaptive_base_skeleton.py  test_blindness_and_break.py  test_hierarchical_hat_node.py  test_ift_linear_solve.py  test_initial_state.py  test_integration.py  test_topk_adaptive_node.py  test_wavelet_basis.py  test_wavelet_biharmonic.py  test_wavelet_dirichlet.py  test_wavelet_node.py  test_wavelet_node_nd.py  test_wavelet_trajectory.py
tests/api/: test_binary_encoder.py  test_field_subscriptions.py  test_frame_renderer_3d.py  test_profile_endpoints.py  test_render_stride.py  test_server_render.py
tests/cloud/: test_auth.py  test_cloud_group.py  test_cloud_session.py  test_coordinator.py  test_health.py  test_launcher.py  test_mock_session.py  test_preempt_checkpoint.py  test_providers.py  test_selkies_renderer.py  test_streaming.py  test_worker_client.py
tests/compliance/: test_audit.py  test_compliance_namespace.py  test_metadata.py  test_provenance.py  test_stability.py  test_uq.py  test_validation_benchmark.py  test_validator.py
tests/core/: test_adaptive.py  test_calibrate.py  test_calibration.py  test_checkpoint.py  test_coupling.py  test_coupling_acceleration.py  test_coupling_convergence.py  test_coupling_group_validation.py  test_coupling_helpers.py  test_coupling_ift_aitken.py  test_coupling_ift_embedded.py  test_coupling_ift_gradient.py  test_coupling_ift_iqn_imvj.py  test_coupling_ift_lineax.py  test_coupling_predictor.py  test_coupling_subcycling.py  test_edge.py  test_edge_validation.py  test_flux_coupling.py  test_graph_manager.py  test_halo_width.py  test_history_logger.py  test_hybrid_node.py  test_implicit.py  test_integration.py  test_integrators.py  test_interface_dof.py  test_interface_mapping.py  test_multirate.py  test_node.py  test_phases_5_7_8.py  test_profiler_perfetto.py  test_replace_static_sharding.py  test_schedule.py  test_spatial_accuracy.py  test_static_array.py  test_static_data.py  test_sweep.py  test_transforms.py
tests/fmi/: test_directional_derivatives.py  test_fmpy_roundtrip.py  test_fmu_state.py  test_model_description.py  test_sidecar.py
tests/nodes/: test_health_check.py  test_heart_pump.py  test_heat.py  test_lbm.py  test_lbm_stream_padded.py  test_rigid_body.py  test_rigid_body_2d.py  test_spring.py  test_vessel_coupling.py
tests/surrogates/: test_callbacks.py  test_dataset.py  test_deeponet.py  test_fno.py  test_physics_losses.py  test_subpackage_layout.py  test_surrogate_checkpoint.py  test_surrogate_integration.py  test_surrogate_node.py  test_trainer.py
tests/usd/: conftest.py  (+5 more)
(+233 files in other folders)
