[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maddening"
version = "0.1.0"
description = "Modular Automatic Differentiation and Data-Enhanced Neural-network INteracting Graph"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Nicholas Ehsan Roy" },
]

# Base install: the simulation engine (JAX + NumPy).
# The compliance subpackage is included in the base install (pure Python,
# no JAX dependency) so downstream libraries can import schema types without
# installing the full simulation stack.
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Matplotlib-based visualization (time-series, 2D scene renderers)
viz = ["matplotlib>=3.5"]

# Rich-based terminal renderer (works over SSH, no GUI needed)
terminal = ["rich>=12.0"]

# ZMQ network transport for remote visualization and command channels
network = ["pyzmq>=25.0"]

# Visualization client only -- no JAX needed.
# Install this on a local machine to view a simulation running on the cloud.
#   pip install maddening[client]           # terminal renderer + ZMQ
#   pip install maddening[client,viz]       # adds matplotlib renderer
client = [
    "pyzmq>=25.0",
    "rich>=12.0",
]

# FastAPI server for HTTP/WebSocket API
api = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=11.0",
]

# Neural surrogate architectures and training
surrogates = ["equinox>=0.11", "optax>=0.1"]

# 3D visualization (server-side rendering with PyVista/VTK)
viz3d = ["pyvista>=0.42", "Pillow>=9.0"]

# GPU-accelerated 3D visualization (pygfx on WebGPU)
gpu-viz = ["pygfx>=0.16", "rendercanvas>=2.0", "glfw>=2.0", "scikit-image>=0.20"]

# SBOM generation (Section 14)
sbom = ["cyclonedx-bom>=4.0"]

# Everything
all = [
    "matplotlib>=3.5",
    "rich>=12.0",
    "pyzmq>=25.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=11.0",
    "equinox>=0.11",
    "optax>=0.1",
    "pyvista>=0.42",
    "Pillow>=9.0",
    "pygfx>=0.16",
    "rendercanvas>=2.0",
    "glfw>=2.0",
    "scikit-image>=0.20",
]

# Development / testing
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
    "maddening[all]",
]

[project.urls]
Repository = "https://github.com/Microrobotics-Simulation-Framework/MADDENING"

[tool.hatch.build.targets.wheel]
packages = ["src/maddening"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    # GraphManager.compile() emits informational warnings about disconnected
    # nodes and cycle staggering -- expected in unit tests with minimal graphs.
    "ignore:WARNING. node .* is disconnected:UserWarning",
    "ignore:WARNING. cycle detected:UserWarning",
    # ZMQ sockets not always cleanly closed in tests
    "ignore::ResourceWarning:zmq",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
