[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maddening"
version = "0.1.0"
description = "Modular Automatic Differentiation and Data-Enhanced Neural-network INteracting Graph"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Nicholas Ehsan Roy" },
]

# Base install: simulation engine (CPU JAX + NumPy + PyYAML).
# For GPU acceleration, add the cuda12 or tpu extra.
dependencies = [
    "jax>=0.4,<0.6",
    "jaxlib>=0.4,<0.6",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]

# ── Hardware acceleration ──────────────────────────────────────────
# Base install gives CPU JAX.  These upgrade to GPU/TPU.
# Combine with any other extra:  pip install maddening[cuda12,server]
cuda12 = ["jax[cuda12]>=0.4,<0.6"]
tpu = ["jax[tpu]>=0.4,<0.6"]

# ── Cloud providers ────────────────────────────────────────────────
# One extra per provider.  Installs SkyPilot WITH the provider SDK.
runpod = ["skypilot[runpod]>=0.11"]
lambda = ["skypilot[lambda]>=0.11"]
aws = ["skypilot[aws]>=0.11"]
gcp = ["skypilot[gcp]>=0.11"]

# All providers supported in maddening.cloud.providers (RunPod + Lambda)
cloud = ["skypilot[runpod,lambda]>=0.11"]

# Every provider SkyPilot supports
cloud-all = ["skypilot[all]>=0.11"]

# ── Feature modules (fine-grained) ─────────────────────────────────
# Matplotlib-based visualization (time-series, 2D scene renderers)
viz = ["matplotlib>=3.5"]

# Rich-based terminal renderer (works over SSH, no GUI needed)
terminal = ["rich>=12.0"]

# ZMQ network transport for remote visualization and command channels
network = ["pyzmq>=25.0"]

# FastAPI server for HTTP/WebSocket API
api = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=11.0",
]

# Neural surrogate architectures and training
surrogates = ["equinox>=0.11", "optax>=0.1"]

# 3D visualization (server-side rendering with PyVista/VTK)
viz3d = ["pyvista>=0.42", "Pillow>=9.0"]

# GPU-accelerated 3D visualization (pygfx on WebGPU)
gpu-viz = ["pygfx>=0.16", "rendercanvas>=2.0", "glfw>=2.0", "scikit-image>=0.20"]

# OpenUSD integration (USD read/write, codeless schemas)
usd = ["usd-core>=21.8"]

# WebRTC streaming (GStreamer + signaling)
streaming = ["PyGObject>=3.42", "websockets>=11.0"]

# SBOM generation
sbom = ["cyclonedx-bom>=4.0"]

# zstd compression for the binary state encoder (v0.2 #6).
# Optional; falls back to uncompressed frames when absent.
compression = ["zstandard>=0.22"]

# ── Task bundles ───────────────────────────────────────────────────
# "I'm running a simulation server on a GPU" (Docker image target)
server = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=11.0",
    "pyzmq>=25.0",
    "rich>=12.0",
    "matplotlib>=3.5",
    "zstandard>=0.22",
]

# "I'm a thin client viewing a remote simulation"
client = [
    "pyzmq>=25.0",
    "rich>=12.0",
]

# ── Meta extras ────────────────────────────────────────────────────
# Everything (all features + RunPod cloud)
all = [
    "matplotlib>=3.5",
    "rich>=12.0",
    "pyzmq>=25.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=11.0",
    "equinox>=0.11",
    "optax>=0.1",
    "pyvista>=0.42",
    "Pillow>=9.0",
    "pygfx>=0.16",
    "rendercanvas>=2.0",
    "glfw>=2.0",
    "scikit-image>=0.20",
    "skypilot[runpod,lambda]>=0.11",
    "PyGObject>=3.42",
    "zstandard>=0.22",
]

# CI testing -- headless-safe subset (no display-dependent packages)
ci = [
    "pytest>=7.0",
    "httpx>=0.24",
    "matplotlib>=3.5",
    "rich>=12.0",
    "pyzmq>=25.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=11.0",
    "equinox>=0.11",
    "optax>=0.1",
    "skypilot[runpod]>=0.11",
    "zstandard>=0.22",
]

# Development / testing (full -- requires display server for viz3d/gpu-viz)
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
    "maddening[all]",
]

[project.urls]
Homepage      = "https://microrobotica.org/maddening/"
Documentation = "https://microrobotica.org/maddening/"
Repository    = "https://github.com/Microrobotics-Simulation-Framework/MADDENING"
Issues        = "https://github.com/Microrobotics-Simulation-Framework/MADDENING/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/maddening"]

[tool.hatch.build.targets.wheel.force-include]
"src/maddening/usd/schema/generatedSchema.usda" = "maddening/usd/schema/generatedSchema.usda"
"src/maddening/usd/schema/plugInfo.json" = "maddening/usd/schema/plugInfo.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    # GraphManager.compile() emits informational warnings about disconnected
    # nodes and cycle staggering -- expected in unit tests with minimal graphs.
    "ignore:WARNING. node .* is disconnected:UserWarning",
    "ignore:WARNING. cycle detected:UserWarning",
    # RigidBody2DNode is deprecated but existing tests still exercise it
    "ignore:RigidBody2DNode is deprecated:DeprecationWarning",
    # ZMQ sockets not always cleanly closed in tests
    "ignore::ResourceWarning:zmq",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # optax 0.2.x sets jax_pmap_shmap_merge which is deprecated in JAX 0.9+
    "ignore:Setting `jax_pmap_shmap_merge`:DeprecationWarning",
    # SelkiesRenderer emits PerformanceWarning on CPU fallback
    "ignore::maddening.warnings.PerformanceWarning",
    # SkyPilot deprecation warnings
    "ignore:.*--cloud.*--region.*--zone.*deprecated:UserWarning",
]
# Custom markers — registered so `filterwarnings=["error"]` above
# doesn't elevate Unknown-Mark warnings to test errors. Mirrors the
# convention already in MIME's pyproject.toml.
markers = [
    "slow: tests >5s wall-clock or that need a beefy machine (latency benchmarks, full-LBM smokes). Run with `pytest -m 'slow or not slow'`. Default suite excludes them.",
    "gpu: tests that require a CUDA device (auto-skipped on CPU-only hosts).",
]
# Default-skip the slow lane in CI; opt in locally with
#   pytest -m 'slow or not slow'  (full suite)
#   pytest -m slow                 (slow only)
addopts = "-m 'not slow'"
